--- a/big-heart-bros/package.json
+++ b/big-heart-bros/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.1.0",
+    "next-auth": "^4.24.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
