--- a/big-heart-bros/tsconfig.json
+++ b/big-heart-bros/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
     "target": "es5",
     "lib": [
       "dom",
@@ -23,7 +25,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "strictNullChecks": true
   },
   "include": [
     "next-env.d.ts",
