--- a/big-heart-bros/package.json
+++ b/big-heart-bros/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^0.3.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -19,11 +20,14 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@supabase/supabase-js": "^2.39.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.9",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
