--- a/big-heart-bros/package.json
+++ b/big-heart-bros/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.3.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.9",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
