--- a/big-heart-bros/package.json
+++ b/big-heart-bros/package.json
@@ -37,12 +37,14 @@
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.9",
+    "openai": "^4.27.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
     "react-icons": "^5.0.1",
+    "react-to-print": "^2.14.15",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
