--- a/big-heart-bros/package.json
+++ b/big-heart-bros/package.json
@@ -49,7 +49,8 @@
     "react-to-print": "^2.14.15",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
