--- a/big-heart-bros/package.json
+++ b/big-heart-bros/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.323.0",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.9",
