--- a/big-heart-bros/package.json
+++ b/big-heart-bros/package.json
@@ -35,6 +35,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.323.0",
     "moment": "^2.30.1",
     "next": "14.1.0",
